-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=commit;h=71249003a92fb56a85f7edc8c28c70ae1bb1fd87
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=commit;h=5c58e03b81e1ac1231f1ae68e4611c31f428f2f9

003
- BCM 4329 fixes from NVIDIA linux 2.6 trunk
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=commit;h=4c0d9cf8d550d5a2b4318f950127fdc086e5b023 -- MEMLEAK fix
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=commit;h=438f97f7bd3127a95174ee8c36c6826bd9ba11ea
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=commit;h=02ba58ef8811d41ef61242af71be30437fdbb847
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=commit;h=cf95ed1acdf1b56de9d1b26e1077ce367cbd65dc
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=commit;h=c59f49309ecb2beb973cd89c7547496967e31134
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=commit;h=9edc2cc0fbfc94fddeaaf20a47e1b4c8e7d424f4
- https://github.com/SetiroN/lge-kernel-star/commit/e1eba9859f1ae31aa4818758c10f6d78bf17cfda

004
- reorganize folder structure, build "build" dir from spica kernel zip template
- add "kosi_defconfig" as custom kernel configuration
- create buildscript for automatic building, versioning and zipping of kernel
- reduce ramzswap devices to 2, double size of these - # of devices should be equal to # cpu accd to documentation

005
- apply Spica fix for CPU memleak 
-- https://github.com/spica234/HP-Krnl-2.6.32.9/commit/6dc04064002fb36ffc9dea87782e0dd178978542
- enhance ramzswap initscript to reset one swap every 5h to clean up unused pages
- change kernel config, remove CONFIG_DEBUG_FS
-- https://github.com/vadonka/lge-kernel-kang/commit/8b0cde6be1b32f726a5b2edf426f7147d5756dfd - reduce pinmux logging
-- https://github.com/vadonka/lge-kernel-kang/blob/4ea935437de25a3de2ac3079cd00e766cb2f7bc2/drivers/spi/ifx_n721_spi.c -- integrate vadonka version to fix link error


TODO:
- fix ramzswap script/sizes
