@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.32.9-Kosi004-HP_RC12SR1R-powered
-# Sat Mar 24 02:38:12 2012
+# Linux kernel version: 2.6.32.9-Kosi005-HP_RC12SR1R-powered
+# Sat Mar 24 04:13:03 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
